Bug 92472 - FILEOPEN: First legacy checkbox in row has too large dimensions on docx import
Summary: FILEOPEN: First legacy checkbox in row has too large dimensions on docx import
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4 all versions
Hardware: Other All
: low minor
Assignee: László Németh
URL:
Whiteboard: interoperability target:7.0.0
Keywords: filter:docx, preBibisect, regression
Depends on:
Blocks: DOCX-ActiveX-Legacy
  Show dependency treegraph
 
Reported: 2015-07-01 09:01 UTC by Jan
Modified: 2020-05-18 07:38 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Document with broken Checkboxes in LO (27.08 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-07-01 09:02 UTC, Jan
Details
screen shots in 4 LibreOffice versions (59.64 KB, image/png)
2015-07-01 12:44 UTC, Cor Nouws
Details
checkboxes can be formatted (884.70 KB, video/mp4)
2018-08-28 17:49 UTC, BogdanB
Details
Screenshot of the document in recent 6.5 master (119.38 KB, image/png)
2020-02-17 12:41 UTC, NISZ LibreOffice Team
Details
Slightly modified document in current master (43.59 KB, image/png)
2020-02-28 11:24 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan 2015-07-01 09:01:57 UTC
When I open the attached docx document in Libreoffice (either 4.2.8.2 or Trunk 5.1 from 30-06-2015) the dimensions of the first checkbox in each row are too large. In MS Office all checkboxes have the same dimensions (like the second one).

It seems to happen only for the first checkbox in row (experimented a bit with that).

Additional bug (probably related): If I resave the document to docx in LO all checkboxes will be large in MS Office but only the first one will be large in LO on reopen. Furthermore, MS Office shows some ugly artefacts which may be related (Article I to Article V). May be some paragraphs are involved?

The example was copied from a questionnaire which, unfortunately, is unusable in LO.
Comment 1 Jan 2015-07-01 09:02:29 UTC
Created attachment 116965 [details]
Document with broken Checkboxes in LO
Comment 2 Cor Nouws 2015-07-01 12:44:14 UTC
Hi Jan,

Thanks for filing the issue. I can confirm that the first checkboxes are too large.
I'll attach an image with screenshots from 5.0.0.2, 3.6.6.1, 3.4.5.2 and 3.3.0...

In 3.3.0 the checkboxes are without gray background, but all the same size
So there is some regression.
Comment 3 Cor Nouws 2015-07-01 12:44:47 UTC
Created attachment 116970 [details]
screen shots in 4 LibreOffice versions
Comment 4 Robinson Tryon (qubit) 2015-12-14 05:32:35 UTC Comment hidden (obsolete)
Comment 5 Joel Madero 2015-12-15 02:24:37 UTC
bibisect isn't available for regressions before 3.5.
Comment 6 Xisco Faulí 2016-09-20 12:24:34 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2018-08-24 02:43:59 UTC Comment hidden (obsolete)
Comment 8 Jan 2018-08-27 19:05:27 UTC
The problem still exists in 6.0.6.
Comment 9 BogdanB 2018-08-28 17:49:14 UTC
Created attachment 144520 [details]
checkboxes can be formatted

I think this is not a bug, and not a regression. Please look at my video.

The checkboxes can be formatted.

So, if we cancel the formatting, all the checkboxes are the same, and can be formatted after that as we wish.

So, in my opinion, this case is closed.
Comment 10 BogdanB 2018-08-28 18:36:05 UTC
It is just a matter of formatting compatibility between Libre and Word.
Comment 11 Jan 2018-08-29 21:08:09 UTC
The problem is that the formatting is just different on import of a docx document. It is a bug because formatting looks different. The import filter probably messes up something.
Comment 12 Aron Budea 2019-06-04 22:56:51 UTC
Already buggy in first commit of bibisect-43all. => preBibisect
Comment 13 NISZ LibreOffice Team 2020-02-17 12:41:22 UTC
Created attachment 157943 [details]
Screenshot of the document in recent 6.5 master

This seems to have gotten better in the table case since:

author	László Németh <nemeth@numbertext.org>	Wed Jan 08 14:26:40 2020 +0100
committer	László Németh <nemeth@numbertext.org>	Thu Jan 09 18:00:16 2020 +0100

tdf#90069 DOCX: fix character style of new table rows

But in the text body it seems like character formatting (30pt font size) still overrides direct formatting (10pt font size), unlike in Word.
Comment 14 Gabor Kelemen (Collabora) 2020-02-28 11:24:54 UTC
Created attachment 158253 [details]
Slightly modified document in current master

The part inside the table are now looking virtually the same, but the checkbox in the document body when at the beginning of the line still looks larger.

However copying it to a new paragraph and adding some text in front of it seems to set formatting priorities correctly.

Verzió: 7.0.0.0.alpha0+ (x64)
Build az.: 853a058ca6b75b0fb14e232911eb9f9553574736
CPU szálak: 8; OS: Windows 10.0 Build 17134; Felületmegjelenítés: GL; VCL: win; 
Területi beállítások: hu-HU (hu_HU); Felület nyelve: hu-HU
Calc: CL
Comment 15 Commit Notification 2020-02-29 16:40:33 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/294babdbbe0a10c732cd5247c5636638c97a4c30

tdf#92472 DOCX import: fix checkbox size set by direct formatting

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Xisco Faulí 2020-03-02 14:43:23 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 950e1aec0a984ce40a5038331f491272b51d41fa
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@László, thanks for fixing this issue!!
Comment 17 Commit Notification 2020-05-18 07:38:00 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/02fe5ec54e339d4f8983a5bf131b9c2d5db9d771

tdf#131963: regression from fix for tdf#92472

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.