tdf#92472 DOCX import: fix checkbox size set by direct formatting

at beginning of paragraphs.

Follow-up of the commit 22ad4d69d771708f28a2d9e137cfd43ac846cf3a
(tdf#121045 DOCX import: fix checkbox size in table).

Change-Id: I06f0dfa4376ff8f5730d8cfe1cbc3de022e8aaff
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89726
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 294babdbbe0a10c732cd5247c5636638c97a4c30)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96141
Tested-by: Gabor Kelemen <kelemen.gabor2@nisz.hu>
Reviewed-by: Gabor Kelemen <kelemen.gabor2@nisz.hu>